Fix Modal Scrolling and layout on mobile

--- a/src/styles/mobile/modal-mobile.scss
+++ b/src/styles/mobile/modal-mobile.scss
@@ -8,6 +8,10 @@
 			grid-row-gap: 0px;
             overflow: scroll;
             margin: 0 5% 15% 5%;
+
+            .content {
+                margin-top: 1em;
+            }
             
             .gallery {
                 display: grid;
