--- a/src/styles/modal.scss
+++ b/src/styles/modal.scss
@@ -1,15 +1,25 @@
 content {
+	// height: 100%;
 	height: 100%;
+	width: 100%;
 	text-align: left;
+	display: inline-block;
 
 	.parent {
 		display: grid;
+		height: 100%;
+		width: auto;
 		grid-template-columns: auto 1fr;
 		grid-template-rows: auto;
 		grid-column-gap: 0px;
 		grid-row-gap: 0px;
+		margin: 0.5em 4% 0 0.5em;
 		overflow: hidden;
-		margin: 0.5em 5% 6% 0.5em;
+
+		.content {
+			padding: 0 1em 6em 0;
+			overflow: auto;
+		}
 
         .gallery {
             img.project-logo {
@@ -19,7 +29,6 @@ content {
                 transition: ease-in-out 0.3s;
             }
         }
-
 
         img.project-logo:hover {
             box-shadow: 10px 10px 69px -32px rgba(0, 0, 0, 0.5);
